[package]
edition = "2021"
name = "bollard"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.12.2", default-features = false, features = ["napi6", "async"] }
napi-derive = "2.12.2"
serde_json = "1"

[dependencies.bollard]
version = "0.18"
features = ["ssl_providerless"]

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
